GNOME Bugzilla – Bug 706363
wayland: fix a compiler warning
Last modified: 2013-08-20 12:15:11 UTC
Implicit declaration of memset
Created attachment 252337 [details] [review] wayland: fix a compiler warning
Review of attachment 252337 [details] [review]: Looks like you added the correct string here.
Attachment 252337 [details] pushed as d26f248 - wayland: fix a compiler warning