wayland: fix a compiler warning

Implicit declaration of memset

https://bugzilla.gnome.org/show_bug.cgi?id=706363